--- a/ec-traefik.yml
+++ b/ec-traefik.yml
@@ -1,17 +1,17 @@
 # To be used in conjunction with erigon.yml, nm.yml, besu.yml or geth.yml
 version: "3.4"
 services:
-  ec:
+  execution:
     labels:
       - traefik.enable=true
       - traefik.http.routers.ec.service=ec
       - traefik.http.routers.ec.entrypoints=websecure
-      - traefik.http.routers.ec.rule=Host(`${ETH1_HOST}${EC_HOST}.${DOMAIN}`)
-      - traefik.http.services.ec.loadbalancer.server.port=${ETH1_RPC_PORT}${EC_RPC_PORT}
+      - traefik.http.routers.ec.rule=Host(`${EC_HOST}.${DOMAIN}`)
+      - traefik.http.services.ec.loadbalancer.server.port=${EC_RPC_PORT}
       - traefik.http.routers.ecws.service=ecws
       - traefik.http.routers.ecws.entrypoints=websecure
-      - traefik.http.routers.ecws.rule=Host(`${ETH1_WS_HOST}${EC_WS_HOST}.${DOMAIN}`)
-      - traefik.http.services.eth1ws.loadbalancer.server.port=${ETH1_WS_PORT}${EC_WS_PORT}
+      - traefik.http.routers.ecws.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
+      - traefik.http.services.eth1ws.loadbalancer.server.port=${EC_WS_PORT}
     depends_on:
       - traefik
 
