--- a/geth/Dockerfile.heco
+++ b/geth/Dockerfile.heco
@@ -27,11 +27,11 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
-RUN mkdir -p /var/lib/goethereum && chown ${USER}:${USER} /var/lib/goethereum
+RUN mkdir -p /data/heco/data && chown -R ${USER}:${USER} /data/heco/data
 
 # Copy executable
 COPY --from=builder /src/huobi-eco-chain/build/bin/geth /usr/local/bin/
 
-COPY ./config.toml /var/lib/goethereum
+COPY ./config.toml /data/heco/data
 
 ENTRYPOINT ["geth"]
