--- a/heco-traefik.yml
+++ b/heco-traefik.yml
@@ -7,11 +7,11 @@ services:
       - traefik.http.routers.heco.service=heco
       - traefik.http.routers.heco.entrypoints=websecure
       - traefik.http.routers.heco.rule=Host(`${EC_HOST}.${DOMAIN}`)
-      - traefik.http.services.heco.loadbalancer.server.port=${EC_RPC_PORT}
+      - traefik.http.services.heco.loadbalancer.server.port=8545
       - traefik.http.routers.hecows.service=hecows
       - traefik.http.routers.hecows.entrypoints=websecure
       - traefik.http.routers.hecows.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
-      - traefik.http.services.hecows.loadbalancer.server.port=${EC_WS_PORT}
+      - traefik.http.services.hecows.loadbalancer.server.port=8546
 
   eth:
     image: tianon/true
