--- a/lh-base.yml
+++ b/lh-base.yml
@@ -11,17 +11,14 @@ services:
     image: lighthouse:local
     stop_grace_period: 1m
     volumes:
-      - /data/eth/${NETWORK}/beacon:/var/lib/lighthouse
-      # - lhbeacon-data:/var/lib/lighthouse
+      - lhbeacon-data:/var/lib/lighthouse
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
       - ${LH_PORT}:${LH_PORT}/tcp
       - ${LH_PORT}:${LH_PORT}/udp
-      - 5054:5054
     expose:
       - 5052/tcp
-      - 5054/tcp
     entrypoint: 
       - docker-entrypoint.sh
       - lighthouse
@@ -32,8 +29,6 @@ services:
       - --http
       - --http-address
       - 0.0.0.0
-      - --http-port
-      - '5052'
       - --network
       - ${NETWORK}
       - --port
@@ -45,18 +40,11 @@ services:
       - --eth1-blocks-per-log-query
       - "150"
       - --debug-level=${LOG_LEVEL}
-      - --metrics
-      - --metrics-address
-      - 0.0.0.0
-      - --metrics-port
-      - '5054'
-      - --validator-monitor-auto
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
     volumes:
-      - /data/eth/${NETWORK}/validator:/var/lib/lighthouse
-      # - lhvalidator-data:/var/lib/lighthouse
+      - lhvalidator-data:/var/lib/lighthouse
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
@@ -72,8 +60,6 @@ services:
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
-    depends_on:
-      - consensus
   validator-import:
     restart: "no"
     image: lighthouse:local
