Initial support for Lodestar consensus client

--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -9,6 +9,7 @@ services:
         - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse:local
+    user: root
     stop_grace_period: 1m
     volumes:
       - lhconsensus-data:/var/lib/lighthouse
@@ -20,6 +21,7 @@ services:
     expose:
       - 5052/tcp
     entrypoint:
+      - docker-entrypoint.sh
       - lighthouse
       - bn
       - --disable-upnp
