--- a/default.env
+++ b/default.env
@@ -52,6 +52,7 @@ BEACON_STATS_API=
 # going to use something other than defaults.
 EC_P2P_PORT=30303
 LH_PORT=9000
+LS_PORT=9000
 PRYSM_PORT=13000
 PRYSM_UDP_PORT=12000
 NIM_PORT=9000
@@ -96,6 +97,11 @@ LH_DOCKERFILE=Dockerfile.binary
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 PRYSM_DOCKER_TAG=stable
 PRYSM_DOCKERFILE=Dockerfile.binary
+
+# Lodestar
+LS_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LS_DOCKER_TAG=latest
+LS_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
