--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -14,8 +14,11 @@ BOR_FULL_NODE_SNAPSHOT_FILE="https://matic-blockchain-snapshots.s3.us-east-1.ama
 BOR_ARCHIVE_NODE_SNAPSHOT_FILE="https://matic-blockchain-snapshots.s3.us-east-1.amazonaws.com/matic-mainnet/bor-archive-node-snapshot-2021-07-02.tar.gz"
 BOR_TAG=master
 BOR_MODE="full"
-TX_LOCAL_ADDR=0x0000000000000000000000000000000000000000
+BOR_CHAIN_ID=137
 BOR_P2P_PORT=30303
+BOR_RPC_PORT=8545
+BOR_WS_PORT=8546
+TX_LOCAL_ADDR=0x0000000000000000000000000000000000000000
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
