--- a/bor-traefik.yml
+++ b/bor-traefik.yml
@@ -7,11 +7,11 @@ services:
       - traefik.http.routers.bor.service=bor
       - traefik.http.routers.bor.entrypoints=websecure
       - traefik.http.routers.bor.rule=Host(`${EC_HOST}.${DOMAIN}`)
-      - traefik.http.services.bor.loadbalancer.server.port=8545
+      - traefik.http.services.bor.loadbalancer.server.port=${BOR_RPC_PORT}
       - traefik.http.routers.borws.service=borws
       - traefik.http.routers.borws.entrypoints=websecure
       - traefik.http.routers.borws.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
-      - traefik.http.services.borws.loadbalancer.server.port=8546
+      - traefik.http.services.borws.loadbalancer.server.port=${BOR_WS_PORT}
 
   eth:
     image: tianon/true
