Bugfix for Nimbus fallback execution client

--- a/default.env
+++ b/default.env
@@ -2,9 +2,9 @@
 COMPOSE_FILE=teku-base.yml:geth.yml:teku-grafana.yml:grafana-insecure.yml
 # Execution client endpoint / chain source. This default uses the execution node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
-# For Teku, Lighthouse and Nimbus, you can specify multiple endpoints separated by commas
+# For Teku and Lighthouse, you can specify multiple endpoints separated by commas
 EC_NODE=http://execution:8545
-# Execution client fallback nodes, only for Prysm. Can't be empty.
+# Execution client fallback nodes, for Prysm or Nimbus. Can't be empty.
 EC_FALLBACK_NODE1=http://execution:8545
 EC_FALLBACK_NODE2=http://execution:8545
 # Graffiti to use for validator
