Enable Prysm doppelganger protection by default

--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -74,6 +74,7 @@ services:
       - --verbosity
       - ${LOG_LEVEL}
       - --${NETWORK}
+      - --enable-doppelganger
       - --accept-terms-of-use
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
