Fixed Teku rapid sync when using Grafana

--- a/default.env
+++ b/default.env
@@ -37,7 +37,7 @@ DDNS_PROXY=true
 
 # Teku rapid sync via initial state. Please create an Infura eth2/beacon project first, then replace the {projectid} and {secret} here
 # and use this line instead of the empty one
-#TEKU_RAPID_SYNC=--initial-state https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
+#TEKU_RAPID_SYNC=--initial-state=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
 TEKU_RAPID_SYNC=
 
 # Consensus client address. This could be comma-separated for Lighthouse, with Infura as failover,
