--- a/teku-base-notz.yml
+++ b/teku-base-notz.yml
@@ -12,8 +12,6 @@ services:
     stop_grace_period: 1m
     volumes:
       - teku-data:/var/lib/teku
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
     ports:
@@ -25,7 +23,7 @@ services:
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
       - --network=${NETWORK}
-      - --eth1-endpoints=${ETH1_NODE}${EC_NODE}
+      - --eth1-endpoints=${EC_NODE}
       - --eth1-deposit-contract-max-request-size=150
       - --p2p-port=${TEKU_PORT}
       - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
@@ -42,8 +40,6 @@ services:
     volumes:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
@@ -51,8 +47,6 @@ services:
     user: teku
     volumes:
       - teku-data:/var/lib/teku
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - /opt/teku/bin/teku
       - voluntary-exit
