--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -27,6 +27,7 @@ services:
       - --log-destination=CONSOLE
       - --network=${NETWORK}
       - --eth1-endpoints=${EC_NODE}
+      - --eth1-deposit-contract-max-request-size=150
       - --p2p-port=${TEKU_PORT}
       - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
       - --logging=${LOG_LEVEL}
