--- a/teku-validator-notz.yml
+++ b/teku-validator-notz.yml
@@ -1,6 +1,6 @@
 version: "3.4"
 services:
-  consensus:
+  validator:
     restart: "${RESTART}"
     build:
       context: ./teku
@@ -9,41 +9,25 @@ services:
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
     image: teku:local
-    stop_grace_period: 1m
     volumes:
       - teku-data:/var/lib/teku
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
-    ports:
-      - ${TEKU_PORT}:${TEKU_PORT}/tcp
-      - ${TEKU_PORT}:${TEKU_PORT}/udp
     entrypoint:
       - docker-entrypoint.sh
       - /opt/teku/bin/teku
+      - validator-client
+      - --beacon-node-api-endpoint=${CC_NODE}
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
       - --network=${NETWORK}
-      - --eth1-endpoints=${ETH1_NODE}${EC_NODE}
-      - --eth1-deposit-contract-max-request-size=150
-      - --p2p-port=${TEKU_PORT}
-      - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
       - --validators-keystore-locking-enabled=true
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
-      - --logging=${LOG_LEVEL}
-      - --rest-api-host-allowlist=*
-      - --rest-api-enabled=true
-    command: ${TEKU_RAPID_SYNC}
   validator-import:
     restart: "no"
     image: teku:local
     volumes:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
@@ -51,17 +35,15 @@ services:
     user: teku
     volumes:
       - teku-data:/var/lib/teku
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - /opt/teku/bin/teku
       - voluntary-exit
-      - --beacon-node-api-endpoint=http://consensus:5051
+      - --beacon-node-api-endpoint=${CC_NODE}
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
   eth:
     image: tianon/true
     restart: "no"
     depends_on:
-      - consensus
+      - validator
 volumes:
   teku-data:
