Support new beaconcha.in stats endpoint

--- a/default.env
+++ b/default.env
@@ -45,8 +45,9 @@ TEKU_RAPID_SYNC=
 CC_NODE=http://consensus:5052
 
 # Beaconcha.in API key for sending client stats from Prysm. Used with prysm-stats.yml
-# Specify as just the API key or as APIKEY/MACHINENAME
+# Specify as just the API key, and give the machine name separately
 BEACON_STATS_API=
+BEACON_STATS_MACHINE=
 
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
