Support Erigon 2021.07.04-alpha

--- a/default.env
+++ b/default.env
@@ -106,8 +106,8 @@ LS_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-ERIGON_DOCKER_TAG=latest
-ERIGON_DOCKERFILE=Dockerfile.source
+ERIGON_DOCKER_TAG=stable
+ERIGON_DOCKERFILE=Dockerfile.binary
 
 # OpenEthereum
 OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
