Use traefik-cf with Bor

--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -20,6 +20,8 @@ BOR_RPC_PORT=8545
 BOR_WS_PORT=8546
 TX_LOCAL_ADDR=0x0000000000000000000000000000000000000000
 
+COMPOSE_FILE=bor.yml:bor-traefik.yml
+
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
@@ -35,4 +37,6 @@ CC_HOST=cc
 DDNS_SUBDOMAIN=
 DDNS_PROXY=false
 
-COMPOSE_FILE=bor.yml:bor-traefik.yml
+TRAEFIK_WEB_HTTP_PORT=80
+TRAEFIK_WEB_PORT=443
+RESTART=unless-stopped
