--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -97,12 +97,10 @@ services:
       - ${LOG_LEVEL}
       - accounts
       - list
-      - --wallet-dir
-      - /var/lib/prysm/
+      - --wallet-dir=/var/lib/prysm/
       - --${NETWORK}
-      # If you chose not to store the wallet password during import, comment out the two following lines
-      - --wallet-password-file
-      - /var/lib/prysm/password.txt
+      # If you chose not to store the wallet password during import, comment out the following line
+      - --wallet-password-file=/var/lib/prysm/password.txt
   validator-import:
     restart: "no"
     image: prysm-validator:local
@@ -120,10 +118,8 @@ services:
       - /var/lib/prysm
       - accounts
       - import
-      - --wallet-dir
-      - /var/lib/prysm/
-      - --keys-dir
-      - /val_keys
+      - --wallet-dir=/var/lib/prysm/
+      - --keys-dir=/val_keys
       - --${NETWORK}
   validator-exit:
     restart: "no"
@@ -141,12 +137,9 @@ services:
       - /var/lib/prysm
       - accounts
       - voluntary-exit
-      - --wallet-dir
-      - /var/lib/prysm/
-      - --beacon-rpc-provider
-      - consensus:4000
-      - --wallet-password-file
-      - /var/lib/prysm/password.txt
+      - --wallet-dir=/var/lib/prysm/
+      - --beacon-rpc-provider=consensus:4000
+      - --wallet-password-file=/var/lib/prysm/password.txt
       - --${NETWORK}
     depends_on:
       - consensus
