Initial support for Opera (Fantom)

--- a/default.env
+++ b/default.env
@@ -122,6 +122,11 @@ BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1)
 BESU_DOCKER_TAG=latest
 BESU_DOCKERFILE=Dockerfile.binary
 
+# Opera
+OPERA_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+OPERA_DOCKER_TAG=latest
+OPERA_DOCKERFILE=Dockerfile.source
+
 # eth2.0-deposit-cli
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 # Does not (yet?) exist on Docker hub
