Saner Heco; ethd update now works with polygon

--- a/heco.yml
+++ b/heco.yml
@@ -24,8 +24,21 @@ services:
       - --config
       - /data/heco/data/config.toml
       #- --ws.origins="*"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.heco.service=heco
+      - traefik.http.routers.heco.entrypoints=websecure
+      - traefik.http.routers.heco.rule=Host(`${EC_HOST}.${DOMAIN}`)
+      - traefik.http.services.heco.loadbalancer.server.port=8545
+      - traefik.http.routers.hecows.service=hecows
+      - traefik.http.routers.hecows.entrypoints=websecure
+      - traefik.http.routers.hecows.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
+      - traefik.http.services.hecows.loadbalancer.server.port=8546
+
   eth:
+    image: tianon/true
     depends_on:
       - heco
+
 volumes:
   heco-ec-data:
