Traefik responds to LB names

--- a/default.env
+++ b/default.env
@@ -30,8 +30,11 @@ AWS_HOSTED_ZONE_ID=myzoneid
 GRAFANA_HOST=grafana
 PRYSM_HOST=prysm
 EC_HOST=ec
+EC_LB=ec-lb
 EC_WS_HOST=ecws
+EC_WS_LB=ecws-lb
 CC_HOST=cc
+CC_LB=cc-lb
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
