--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -31,11 +31,10 @@ CF_EMAIL=user@example.com
 CF_API_TOKEN=SECRETTOKEN
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
-GRAFANA_HOST=grafana
-PRYSM_HOST=prysm
 EC_HOST=ec
+EC_LB=ec-lb
 EC_WS_HOST=ecws
-CC_HOST=cc
+EC_WS_LB=ecws-lb
 DDNS_SUBDOMAIN=
 DDNS_PROXY=false
 
