--- a/bor.yml
+++ b/bor.yml
@@ -131,10 +131,16 @@ services:
       - traefik.http.routers.bor.service=bor
       - traefik.http.routers.bor.entrypoints=websecure
       - traefik.http.routers.bor.rule=Host(`${EC_HOST}.${DOMAIN}`)
+      - traefik.http.routers.borlb.service=bor
+      - traefik.http.routers.borlb.entrypoints=websecure
+      - traefik.http.routers.borlb.rule=Host(`${EC_LB}.${DOMAIN}`)
       - traefik.http.services.bor.loadbalancer.server.port=${BOR_RPC_PORT}
       - traefik.http.routers.borws.service=borws
       - traefik.http.routers.borws.entrypoints=websecure
       - traefik.http.routers.borws.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
+      - traefik.http.routers.borwslb.service=borws
+      - traefik.http.routers.borwslb.entrypoints=websecure
+      - traefik.http.routers.borwslb.rule=Host(`${EC_WS_LB}.${DOMAIN}`)
       - traefik.http.services.borws.loadbalancer.server.port=${BOR_WS_PORT}
 
   eth:
