--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -36,8 +36,12 @@ services:
     command: ${TEKU_RAPID_SYNC}
     labels:
       - traefik.enable=true
+      - traefik.http.routers.cc.service=cc
       - traefik.http.routers.cc.entrypoints=websecure
       - traefik.http.routers.cc.rule=Host(`${CC_HOST}.${DOMAIN}`)
+      - traefik.http.routers.cclb.service=cc
+      - traefik.http.routers.cclb.entrypoints=websecure
+      - traefik.http.routers.cclb.rule=Host(`${CC_LB}.${DOMAIN}`)
       - traefik.http.services.cc.loadbalancer.server.port=5051
   eth:
     image: tianon/true
