--- a/default.env
+++ b/default.env
@@ -70,6 +70,18 @@ EC_RPC_PORT=8545
 # Execution client WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 EC_WS_PORT=8546
 
+# Geth cache size. This matters for low-memory machines such as RasPi 4, where
+# you may want to set it to 256. Geth will use the default if this is left blank.
+#GETH_CACHE=--cache=256
+GETH_CACHE=
+
+# Erigon pruning mode. hrtc is maximum prune; this requires an Infura or other
+# 3rd-party temporarily while initial-syncing the consensus client, after which
+# Erigon can be used. htc is a partial prune, which doesn't require that dance
+# but takes considerably more disk space. Leaving the variable empty would
+# configure an archive node.
+ERIGON_PRUNE=hrtc
+
 # Restart policy: Set to no if you do not want services to automatically restart
 RESTART=unless-stopped
 # If you want debug logs, set this to debug instead of info
@@ -78,10 +90,11 @@ LOG_LEVEL=info
 # You can set specific version targets and choose
 # binary or compiled from source builds below,
 # via `Dockerfile.binary` or `Dockerfile.source`
+# These settings are not migrated when running `./ethd update`
 
 # Nimbus
 NIM_SRC_BUILD_TARGET=stable
-NIM_DOCKER_TAG=amd64-latest
+NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
