--- a/geth.yml
+++ b/geth.yml
@@ -15,15 +15,11 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/tcp
-      - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/udp
+      - ${EC_P2P_PORT}:${EC_P2P_PORT}/tcp
+      - ${EC_P2P_PORT}:${EC_P2P_PORT}/udp
     expose:
-      - ${ETH1_RPC_PORT}${EC_RPC_PORT}/tcp
-      - ${ETH1_WS_PORT}${EC_WS_PORT}/tcp
-    networks:
-      default:
-        aliases:
-          - eth1
+      - ${EC_RPC_PORT}/tcp
+      - ${EC_WS_PORT}/tcp
     entrypoint:
       - docker-entrypoint.sh
       - geth
@@ -36,17 +32,18 @@ services:
       - --datadir
       - /var/lib/goethereum
       - --port
-      - ${ETH1_PORT}${EC_P2P_PORT}
+      - ${EC_P2P_PORT}
       - --http.port
-      - ${ETH1_RPC_PORT}${EC_RPC_PORT}
+      - ${EC_RPC_PORT}
       - --ws
       - --ws.addr
       - 0.0.0.0
       - --ws.port
-      - ${ETH1_WS_PORT}${EC_WS_PORT}
+      - ${EC_WS_PORT}
       - --ws.api
       - web3,eth,net
-      - --${ETH1_NETWORK}${EC_NETWORK}
+      - --${EC_NETWORK}
+    command: ${GETH_CACHE}
   eth:
     depends_on:
       - execution
