--- a/erigon.yml
+++ b/erigon.yml
@@ -32,21 +32,24 @@ services:
       - any
       - --chain
       - ${EC_NETWORK}
-      - --prune
-      - htc
+      - --prune=${ERIGON_PRUNE}
   execution:
     restart: "${RESTART}"
     image: erigon:local
     user: erigon
     volumes:
+      - erigon-ec-data:/var/lib/erigon
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     expose:
       - ${EC_RPC_PORT}/tcp
     depends_on:
       - erigon
+    pid: service:erigon # Use erigon's PID namespace. It's required to open Erigon's DB from another process (RPCDaemon local-mode)
     entrypoint:
       - rpcdaemon
+      - --datadir
+      - /var/lib/erigon
       - --private.api.addr
       - erigon:9090
       - --http.addr
@@ -60,7 +63,6 @@ services:
       - --ws
   eth:
     depends_on:
-      - erigon
       - execution
 volumes:
   erigon-ec-data:
