--- a/geth-grafana.yml
+++ b/geth-grafana.yml
@@ -5,7 +5,7 @@ services:
   execution:
     expose:
       - 6060/tcp
-    command: --metrics --metrics.expensive --pprof --pprof.addr=0.0.0.0
+    command: --metrics --metrics.expensive --pprof --pprof.addr=0.0.0.0 ${GETH_CACHE}
   prometheus:
     depends_on:
       - execution
