--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -14,7 +14,7 @@ services:
       - --datadir
       - /var/lib/lighthouse
       - --beacon-nodes
-      - ${BN_NODE}${CC_NODE}
+      - ${CC_NODE}
       - --graffiti
       - ${GRAFFITI}
       - --network
@@ -56,7 +56,7 @@ services:
       - validator
       - exit
       - --beacon-node
-      - ${BN_NODE}${CC_NODE}
+      - ${CC_NODE}
       - --datadir
       - /var/lib/lighthouse
       - --network
