--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -9,7 +9,7 @@ WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/sigp/lighthouse.git && cd lighthouse && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:buster-slim
+FROM debian:bullseye-slim
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
