--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -12,7 +12,7 @@ WORKDIR /go/src
 RUN bash -c "git clone https://github.com/prysmaticlabs/prysm.git && cd prysm && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && bazel build --config=release //beacon-chain:beacon-chain && bazel build --config=release //validator:validator && bazel build --config=release //slasher:slasher && bazel build --config=release //cmd/client-stats:client-stats"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:buster-slim as consensus
+FROM debian:bullseye-slim as consensus
 
 ARG USER=prysmconsensus
 ARG UID=10002
