--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -1,5 +1,5 @@
-# Build Teku in a stock debian container
-FROM openjdk:16-jdk-slim-buster as builder
+# Build Teku in a stock Ubuntu container
+FROM eclipse-temurin:16-jdk-focal as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -11,8 +11,8 @@ RUN apt-get update && apt-get install -y ca-certificates git
 WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/PegaSysEng/teku.git && cd teku && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && ./gradlew installDist"
 
-# Pull all binaries into a second stage deploy debian container
-FROM openjdk:16-slim-buster
+# Pull all binaries into a second stage deploy Ubuntu container
+FROM eclipse-temurin:16-focal
 
 ARG USER=teku
 ARG UID=10002
