--- a/lh-base.yml
+++ b/lh-base.yml
@@ -55,6 +55,7 @@ services:
       - /var/lib/lighthouse
       - --beacon-nodes
       - ${CC_NODE}
+      - --enable-doppelganger-protection
       - --graffiti
       - ${GRAFFITI}
       - --network
