--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -19,6 +19,7 @@ BOR_CHAIN_ID=137
 BOR_P2P_PORT=30303
 BOR_RPC_PORT=8545
 BOR_WS_PORT=8546
+BOR_CACHE=16192
 # Comma-separated list of addresses to treat as "local"
 TX_LOCAL_ADDR=0x0000000000000000000000000000000000000000
 
