--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -14,6 +14,7 @@ HEIMDALL_SNAPSHOT_FILE="https://matic-blockchain-snapshots.s3-accelerate.amazona
 BOR_FULL_NODE_SNAPSHOT_FILE="https://matic-blockchain-snapshots.s3-accelerate.amazonaws.com/matic-mainnet/bor-pruned-snapshot-2021-09-08.tar.gz"
 BOR_ARCHIVE_NODE_SNAPSHOT_FILE="https://matic-blockchain-snapshots.s3-accelerate.amazonaws.com/matic-mainnet/bor-archive-node-snapshot-2021-08-31.tar.gz"
 BOR_TAG=master
+BOR_SRC_TAG=master
 BOR_MODE="full"
 BOR_CHAIN_ID=137
 BOR_P2P_PORT=30303
